# python-poetry-template

./: .pre-commit-config.yaml  README.md  pyproject.toml
python_poetry_template/: dynamo_util_class.py  main.py  s3_util.py  s3_util_class.py
tests/: test_main.py  test_s3_util.py  test_s3_util_class.py
tests/integration/: test_main_int.py  test_s3_util_class_int.py
tests/unit/: test_main.py  test_s3_util_class.py
