[tool.poetry]
name = "python-poetry-template"
version = "0.1.0"
description = ""
authors = ["Garrett Sweeney <garrett.d.sweeney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.21.22"
mock = "^4.0.3"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pub_script = 'python_poetry_template.main:get_specific_bucket_objects'

[tool.black]
line-length = 120